--- a/src/styles/_partials/_vars.scss
+++ b/src/styles/_partials/_vars.scss
@@ -1,16 +1,4 @@
-/* COLORS */
-
-$accent: #FF5252;
-$white: #FFF;
-$menu: #FF5252;
-$sectionHighlight: #F1F6F8;
-
-/* TEXT */
-
-$text: #37474F;
-$textHover: #78909C;
-$textLight: #B0BEC5;
-$links: #1785F8;
+$websiteTheme: light;
 
 /* LANGUAGES, TAGS AND ICONS */
 
