--- a/src/styles/error.scss
+++ b/src/styles/error.scss
@@ -1,107 +1,118 @@
 @import './_partials/_flexbox.scss';
 @import './_partials/_vars.scss';
+@import './_partials/_theme.scss';
+@import './_partials/_mixins.scss';
 
-html, body {
-	margin: 0;
-    padding: 0;
-    text-rendering: optimizeLegibility;
-    font-family: $systemFonts;
-    font-size: 16px;
-    line-height: 1.5;
-    font-weight: 300;
-    background-color: $sectionHighlight;
-    color: $text;
-	overflow-x: hidden;
+body,
+html {
+  margin: 0;
+  padding: 0;
+  text-rendering: optimizeLegibility;
+  font-family: $systemFonts;
+  font-size: 16px;
+  line-height: 1.5;
+  font-weight: 300;
+  background-color: theme($websiteTheme, backgroundSurface);
+  color: theme($websiteTheme, text);
+  overflow-x: hidden;
 }
 
-.status-code, a, h1 {
-	color: $accent;
+.status-code,
+a,
+h1 {
+  color: theme($websiteTheme, primary);
 }
 
 .btn {
-	font-family: $systemFonts;
-	font-weight: 400;
-	padding: .45em 1em;
-	border-radius: 50px;
-	transition: all .3s ease-out;
-	letter-spacing: .015em;
-	display: flex;
-	align-items: center;
-	background-color: $accent;
-	color: $white;
-	text-decoration: none!important;
+  font-family: $systemFonts;
+  font-weight: 400;
+  padding: 0.45em 1em;
+  border-radius: 50px;
+  transition: all 0.3s ease-out;
+  letter-spacing: 0.015em;
+  display: flex;
+  align-items: center;
+  background-color: theme($websiteTheme, primary);
+  color: theme($websiteTheme, textOnPrimary);
+  text-decoration: none!important;
 
-	&-raised {
-		box-shadow: 0 .5em 1.5em rgba(255, 82, 82, .45);
-	}
+  &-raised {
+    box-shadow: 0 0.5em 1.5em rgba(theme($websiteTheme, primary), .45);
+  }
 }
 
 .btn-blue {
-	background-color: #52b8ff;
-	box-shadow: 0 .5em 1.5em rgba(82, 184, 255, .45);
+  background-color: theme($websiteTheme, secondary);
+  box-shadow: 0 0.5em 1.5em rgba(theme($websiteTheme, secondary), .45);
 }
 
 .btn-return {
-	display:flex;
-	padding-top:1em;
+  display: flex;
+  padding-top: 1em;
 }
 
-h1, h2, h3,  h4, h5, h6 {
-    line-height: 1.15;
-    margin-top: 0;
-    margin-bottom: 1rem
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  line-height: 1.15;
+  margin-top: 0;
+  margin-bottom: 1rem;
 }
 
 h1 {
-    font-size: 4.5em;
-    font-weight: 700;
+  font-size: 4.5em;
+  font-weight: 700;
 }
 
 h2 {
-    font-size: 2.5em;
-    font-weight: 600;
+  font-size: 2.5em;
+  font-weight: 600;
 }
 
 h3 {
-    font-size: 1.5em;
-    font-weight: 400;
+  font-size: 1.5em;
+  font-weight: 400;
 }
 
 h4 {
-    font-size: 1.25em;
-    font-weight: 400;
+  font-size: 1.25em;
+  font-weight: 400;
 }
 
 h5 {
-    font-size: 1.125em
+  font-size: 1.125em;
 }
 
 ul {
-	list-style: none;
-	padding: 0;
-	font-size: 1.5em;
+  list-style: none;
+  padding: 0;
+  font-size: 1.5em;
 }
 
 li a {
-	text-decoration: none;
-	transition: color .2s ease-in-out;
+  text-decoration: none;
+  transition: color 0.2s ease-in-out;
 
-	&:hover {
-		color: $textHover;
-	}
+  &:hover {
+    color: theme($websiteTheme, textSecondary);
+  }
 }
 
 .message {
-	min-height: 100vh;
-	padding: 3em;
+  min-height: 100vh;
+  padding: 3em;
 }
 
-@media(max-width: 468px) {
-	.message {
-		padding: 1.5em;
-	}
+@include mediaUpToMobileDevices {
+  .message {
+    padding: 1.5em;
+  }
 
-	html, body {
-		font-size: 14px;
-	}
+  body,
+  html {
+    font-size: 14px;
+  }
 }
