--- a/src/views/_includes/_footer.pug
+++ b/src/views/_includes/_footer.pug
@@ -1,23 +1,23 @@
 - var isDevelopment = process.env.NODE_ENV === 'development'
 - var baseUrl = isDevelopment ? 'http://localhost:5000' : 'https://carloscuesta.me'
-footer
-    .wrap
-        .row.middle-xs
-            .col-xs-12.col-sm-6
-                h3 #{me.name}
-                ul.footer-navigation
-                    li.item
-                        a(href=baseUrl, onmousedown="ga('send', 'event', 'Footer Nav', 'Home');")
-                            |Home
-                    li.item
-                        a(href=`${baseUrl}/about`, onmousedown="ga('send', 'event', 'Footer Nav', 'About me');")
-                            |About Me
-                    li.item
-                        a(href=`${baseUrl}/blog`, onmousedown="ga('send', 'event', 'Footer Nav', 'Blog');", target="_blank")
-                            |Blog
-                    li.item
-                        a(href='mailto:'+me.mail, onmousedown="ga('send', 'event', 'Footer Nav', 'Mail');")
-                            |Contact
+footer.site-footer
+  .wrap
+    .row.middle-xs
+      .col-xs-12.col-sm-6
+        h3 #{me.name}
+        ul.footer-navigation
+          li.item
+            a(href=baseUrl, onmousedown="ga('send', 'event', 'Footer Nav', 'Home');")
+              |Home
+          li.item
+            a(href=`${baseUrl}/about`, onmousedown="ga('send', 'event', 'Footer Nav', 'About me');")
+              |About Me
+          li.item
+            a(href=`${baseUrl}/blog`, onmousedown="ga('send', 'event', 'Footer Nav', 'Blog');", target="_blank")
+              |Blog
+          li.item
+            a(href='mailto:'+me.mail, onmousedown="ga('send', 'event', 'Footer Nav', 'Mail');")
+              |Contact
 
             .social.col-xs-12.col-sm-6
                 a(href="https://twitter.com/crloscuesta", target="_blank")
