--- a/src/views/aboutme.pug
+++ b/src/views/aboutme.pug
@@ -1,6 +1,6 @@
 - var isDevelopment = process.env.NODE_ENV === 'development'
 doctype html
-html
+html(lang="en")
   head
     title Carlos Cuesta | About Me | Front End Developer
     if isDevelopment
