--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,6 +1,6 @@
 - var isDevelopment = process.env.NODE_ENV === 'development'
 doctype html
-html
+html(lang="en")
   head
     title #{site.title}
     if isDevelopment
