:sparkles: Improve Open Source section UI

--- a/src/views/_includes/_sections/_github.pug
+++ b/src/views/_includes/_sections/_github.pug
@@ -1,7 +1,7 @@
 section.github
   .wrap
-    h2.section-title GitHub
-    h4.section-subtitle The most popular projects of my repo.
+    h2.section-title Open Source
+    h4.section-subtitle The most featured projects.
     .row.around-xs
       each repo in githubData
         article.col-xs-12.col-sm-6.col-md-4.github-repo
