--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -116,16 +116,17 @@
 }
 
 .repo {
-  padding: 60px 40px;
   border-radius: 2px;
-  border-top: 3px solid;
   border-top-color: theme($websiteTheme, textSecondary);
-  transition: all 0.3s ease-out;
-  flex: 1;
+  border-top: 3px solid;
   box-shadow: 0 1px 2px rgba(theme($websiteTheme, shadowColor), .15);
+  flex: 1;
+  margin: 1em 0;
+  padding: 3em 2em;
+  transition: all 0.3s ease-out;
 
   &:hover {
-    box-shadow: 0 15px 30px rgba(theme($websiteTheme, shadowColor), .15);
+    box-shadow: 0 16px 24px rgba(theme($websiteTheme, shadowColor), .15);
   }
 
   &-title {
@@ -381,11 +382,6 @@
     font-size: 0.75em;
     text-transform: uppercase;
   }
-}
-
-.repo,
-.tweet {
-  margin: 2em 0;
 }
 
 @include mediaUpToSmallDevices {
