:lock: Add rel=noopener to external links
As pointed out for Lighthouse this improves performance and security.

--- a/src/views/_includes/_sections/_blog.pug
+++ b/src/views/_includes/_sections/_blog.pug
@@ -10,16 +10,16 @@ section.blog
             .post-content
               header
                 h2.post-title
-                  a(href='/blog'+post.url, onmousedown="ga('send', 'event', 'Post', 'Click', '" +post.title+ "');", target="_blank")=post.title
+                  a(href='/blog'+post.url, onmousedown="ga('send', 'event', 'Post', 'Click', '" +post.title+ "');", target="_blank", rel="noopener")=post.title
               .post-info
                 time(datetime=post.published_at)=post.publishedAt
                 span.post-tags
                   each tag in post.tags
-                    a(class='post-tag '+tag.name, href='/blog/tag/'+tag.name, onmousedown="ga('send', 'event', 'Post', 'Click', 'tag-"+tag.name+"');", target="_blank")='#'+tag.name
+                    a(class='post-tag '+tag.name, href='/blog/tag/'+tag.name, onmousedown="ga('send', 'event', 'Post', 'Click', 'tag-"+tag.name+"');", target="_blank", rel="noopener")='#'+tag.name
               p.post-excerpt=post.excerpt
             footer.post-footer
-              a.read-more(href='/blog'+post.url, onmousedown="ga('send', 'event', 'Post', 'Click', 'Read More');", target="_blank") Read more
+              a.read-more(href='/blog'+post.url, onmousedown="ga('send', 'event', 'Post', 'Click', 'Read More');", target="_blank", rel="noopener") Read more
                 svg.icon.icon-arrow
                   use(xlink:href="#icon-arrow")
     .more-btn
-      a.btn.btn-large.btn-blue(href="https://carloscuesta.me/blog" onmousedown="ga('send', 'event', 'Button', 'Click', 'Read more posts');", target="_blank") See more posts
+      a.btn.btn-large.btn-blue(href="https://carloscuesta.me/blog" onmousedown="ga('send', 'event', 'Button', 'Click', 'Read more posts');", target="_blank", rel="noopener") See more posts
