--- a/src/views/_includes/_sections/_aboutme.pug
+++ b/src/views/_includes/_sections/_aboutme.pug
@@ -7,13 +7,13 @@ section.aboutme(itemprop="author" itemscope itemtype="http://schema.org/Person")
         .getintouch
           a.btn.btn-red(href="/about") About Me
           .social
-            a(itemprop="sameAs", onmousedown="ga('send', 'event', 'Social Icons', 'Twitter');", href='https://twitter.com/'+social.twitter, target="_blank", aria-label="Carlos Cuesta Twitter")
+            a(itemprop="sameAs", onmousedown="ga('send', 'event', 'Social Icons', 'Twitter');", href='https://twitter.com/'+social.twitter, target="_blank", rel="noopener", aria-label="Carlos Cuesta Twitter")
               svg.icon.icon-twitter
                 use(xlink:href="#icon-twitter")
-            a(itemprop="sameAs", onmousedown="ga('send', 'event', 'Social Icons', 'GitHub');", href='https://github.com/'+social.github, target="_blank", aria-label="Carlos Cuesta GitHub")
+            a(itemprop="sameAs", onmousedown="ga('send', 'event', 'Social Icons', 'GitHub');", href='https://github.com/'+social.github, target="_blank", rel="noopener", aria-label="Carlos Cuesta GitHub")
               svg.icon.icon-github
                 use(xlink:href="#icon-github")
-            a(itemprop="sameAs", onmousedown="ga('send', 'event', 'Social Icons', 'LinkedIn');", href='https://es.linkedin.com/in/'+social.linkedin, target="_blank", aria-label="Carlos Cuesta LinkedIn")
+            a(itemprop="sameAs", onmousedown="ga('send', 'event', 'Social Icons', 'LinkedIn');", href='https://es.linkedin.com/in/'+social.linkedin, target="_blank", rel="noopener", aria-label="Carlos Cuesta LinkedIn")
               svg.icon.icon-linkedin
                 use(xlink:href="#icon-linkedin")
       .col-xs-12.col-sm-6.center-xs
