:bug: Add avatar to public image folder and reference it on metas

--- a/src/views/_includes/_head.pug
+++ b/src/views/_includes/_head.pug
@@ -7,11 +7,11 @@ meta(name="viewport", content="width=device-width, initial-scale=1.0")
 meta(name="twitter:card", content="summary")
 meta(name="twitter:title", content=site.title)
 meta(name="twitter:description", content=site.description)
-meta(name="twitter:image:src", content='http://carloscuesta.me/'+me.avatar)
+meta(name="twitter:image:src", content='http://carloscuesta.me/img/'+me.avatar)
 meta(name="twitter:creator", content="@crloscuesta")
 meta(property="og:title", content=site.title)
 meta(name="og:description", content=site.description)
-meta(property="og:image",  content='http://carloscuesta.me/'+me.avatar)
+meta(property="og:image",  content='http://carloscuesta.me/img/'+me.avatar)
 meta(name="robots", content="index, follow")
 meta(name='norton-safeweb-site-verification', content='pbmzdewej40rd147ge8m1655pimbiptr4jkdnhhfib0tqrzta1sjvluhw7rpppz5x1kszo3z2gtgb9radg7doqunf1485fp013dpz2wee565lk2a31jr40a17q4tvebz')
 link(rel="apple-touch-icon", sizes="57x57", href="img/apple-icon-57x57.png")
