--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -60,11 +60,6 @@
   }
 }
 
-.more-btn {
-  display: flex;
-  justify-content: center;
-}
-
 .btn {
   align-items: center;
   border-radius: 50px;
@@ -183,170 +178,168 @@
   color: $stars;
 }
 
-.icon-arrow {
-  width: 1.25em;
-  height: 1.25em;
-  margin-left: 0.35em;
-  transition: all 0.15s ease-out;
-  fill: theme($websiteTheme, secondary);
-}
+/* Writings */
 
-.forks {
-  color: theme($websiteTheme, text);
-}
+.blog {
+  &-posts {
+    flex-wrap: nowrap;
+    overflow-x: scroll;
 
-.icon-star {
-  fill: $stars;
-}
+    &::-webkit-scrollbar {
+      -webkit-appearance: none;
+      height: .5em;
+    }
 
-.icon-globe {
-  fill: $web;
-  width: 1.35em!important;
-  height: 1.35em!important;
-}
+    &::-webkit-scrollbar-thumb {
+      border-radius: 4px;
+      background-color: theme($websiteTheme, textSecondary);
+    }
 
-.icon-fork {
-  fill: theme($websiteTheme, text);
-}
-
-.icon-fork,
-.icon-star,
-.web {
-  transition: all 0.2s ease-out;
-
-  &:hover {
-    transform: scale(1.25);
+    &::-webkit-scrollbar-track {
+      border-radius: 4px;
+      box-shadow: 0 1px 4px rgba(theme($websiteTheme, shadowColor), .25);
+      margin: 0 1.15em;
+    }
   }
 
-  &:active {
-    transform: scale(.95);
-  }
-}
-
-.blog time {
-  font-size: 0.75em;
-  color: theme($websiteTheme, textSecondary);
-  text-transform: uppercase;
-  font-weight: 400;
-  margin-right: 1em;
-}
-
-.post-wrap {
-  display: flex;
-}
-
-.post {
-  display: flex;
-  padding: 0;
-  transition: all 0.3s ease-out;
-  border-radius: 2px;
-  margin: 2.75em 0;
-  overflow: hidden;
-  box-shadow: 0 1px 4px rgba(theme($websiteTheme, shadowColor), .15);
-  flex-direction: column;
-  justify-content: space-between;
-
-  header {
-    width: 100%;
-  }
-
-  &:hover {
-    box-shadow: 0 15px 45px rgba(theme($websiteTheme, shadowColor), .15);
-  }
-
-  &-info {
+  .post-wrap {
     display: flex;
-    flex-wrap: wrap;
-    margin-top: 0.45em;
-    align-items: center;
   }
 
-  &-excerpt {
-    margin-bottom: 0;
-  }
-
-  &-content {
-    padding: 2.5em;
+  .post {
+    border-radius: 2px;
+    box-shadow: 0 1px 4px rgba(theme($websiteTheme, shadowColor), .15);
     display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-  }
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 1em 0 2em;
+    overflow: hidden;
+    padding: 0;
+    transition: all 0.3s ease-out;
 
-  &-footer {
-    padding: 1em 2.5em;
-    border-top: 1px theme($websiteTheme, backgroundSurface) solid;
-  }
+    header {
+      width: 100%;
+    }
 
-  &-image {
-    width: 100%;
-  }
+    &:hover {
+      box-shadow: 0 16px 24px rgba(theme($websiteTheme, shadowColor), .15);
+    }
 
-  &-title {
-    font-size: 1.35em;
-    font-weight: 600;
-    line-height: 1.15;
+    &-info {
+      display: flex;
+      flex-wrap: wrap;
+      margin-top: 0.45em;
+      align-items: center;
+    }
 
-    a {
-      color: theme($websiteTheme, text);
-      transition: color 0.2s ease-out;
+    &-excerpt {
+      margin-bottom: 0;
+    }
 
-      &:hover {
-        color: theme($websiteTheme, textSecondary);
+    &-content {
+      padding: 2em;
+      display: flex;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+
+    &-footer {
+      padding: 1em 2em;
+      border-top: 1px theme($websiteTheme, backgroundSurface) solid;
+    }
+
+    &-image {
+      width: 100%;
+    }
+
+    &-title {
+      font-size: 1.35em;
+      font-weight: 600;
+      line-height: 1.15;
+
+      a {
+        color: theme($websiteTheme, text);
+        transition: color 0.2s ease-out;
+
+        &:hover {
+          color: theme($websiteTheme, textSecondary);
+        }
+      }
+    }
+
+    &-tag {
+      &:hover::before {
+        visibility: visible;
+        -webkit-transform: scaleX(1);
+        transform: scaleX(1);
+      }
+
+      &:before {
+        -webkit-transform: scaleX(0);
+        -webkit-transition: all 0.2s ease-in-out 0s;
+        bottom: 0;
+        content: "";
+        height: 2px;
+        left: 0;
+        position: absolute;
+        transform: scaleX(0);
+        transition: all 0.2s ease-in-out 0s;
+        visibility: hidden;
+        width: 100%;
+      }
+    }
+
+    &-tags {
+      a {
+        font-size: 0.75em;
+        margin-right: 0.85em;
+        padding: 0 0.25em 0.25em;
+        position: relative;
+        text-decoration: none;
+        text-transform: uppercase;
+      }
+
+      @each $tag, $color in ('personal': $personal, 'javascript': $javascript, 'nodejs': $nodejs, 'npm': $npm, 'tools': $tools, 'react': $react, 'conferences': $conferences) {
+        @include createTag($tag, $color);
       }
     }
   }
 
-  &-tag {
-    &:hover::before {
-      visibility: visible;
-      -webkit-transform: scaleX(1);
-      transform: scaleX(1);
-    }
+  .fake-article {
+    color: theme($websiteTheme, text);
+    justify-content: center;
+  }
 
-    &:before {
-      content: "";
-      position: absolute;
-      width: 100%;
-      height: 2px;
-      bottom: 0;
-      left: 0;
-      visibility: hidden;
-      -webkit-transform: scaleX(0);
-      transform: scaleX(0);
-      -webkit-transition: all 0.2s ease-in-out 0s;
-      transition: all 0.2s ease-in-out 0s;
+  time {
+    color: theme($websiteTheme, textSecondary);
+    font-size: 0.75em;
+    font-weight: 400;
+    margin-right: 1em;
+    text-transform: uppercase;
+  }
+
+  .read-more {
+    align-items: center;
+    color: theme($websiteTheme, secondary);
+    display: flex;
+    transition: all 0.3s ease-out;
+
+    &:hover {
+      color: rgba(theme($websiteTheme, secondary), 0.6);
+
+      .icon-arrow {
+        margin-left: 0.85em;
+        fill: rgba(theme($websiteTheme, secondary), 0.6);
+      }
     }
   }
 
-  &-tags {
-    a {
-      padding: 0 0.25em 0.25em;
-      font-size: 0.75em;
-      text-transform: uppercase;
-      margin-right: 0.85em;
-      position: relative;
-      text-decoration: none;
-    }
-
-    @each $tag, $color in ('personal': $personal, 'javascript': $javascript, 'nodejs': $nodejs, 'npm': $npm, 'tools': $tools, 'react': $react, 'conferences': $conferences) {
-      @include createTag($tag, $color);
-    }
-  }
-}
-
-.read-more {
-  display: flex;
-  align-items: center;
-  transition: all 0.3s ease-out;
-  color: theme($websiteTheme, secondary);
-
-  &:hover {
-    color: rgba(theme($websiteTheme, secondary), 0.6);
-
-    .icon-arrow {
-      margin-left: 0.85em;
-      fill: rgba(theme($websiteTheme, secondary), 0.6);
-    }
+  .icon-arrow {
+    width: 1.25em;
+    height: 1.25em;
+    margin-left: 0.35em;
+    transition: all 0.15s ease-out;
+    fill: theme($websiteTheme, secondary);
   }
 }
 
@@ -360,6 +353,8 @@
   font-weight: 300;
   color: theme($websiteTheme, textSecondary);
 }
+
+/* Footer */
 
 .site-footer {
   color: theme($websiteTheme, text);
