--- a/src/styles/_partials/_defaults.scss
+++ b/src/styles/_partials/_defaults.scss
@@ -1,87 +1,94 @@
-html, body {
-	margin: 0;
-    padding: 0;
-    font-family: $systemFonts;
-    font-size: 16px;
-    line-height: 1.5;
-    font-weight: 300;
-    background-color: $white;
-    color: $text;
-    overflow-x: hidden;
-    font-weight: 300;
+@import './_vars.scss';
+@import './_partials/_theme.scss';
+
+body,
+html {
+  background-color: theme($websiteTheme, background);
+  color: theme($websiteTheme, text);
+  font-family: $systemFonts;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.5;
+  margin: 0;
+  overflow-x: hidden;
+  padding: 0;
 }
 
 a {
-	text-decoration: none;
-	color: $links;
+  color: theme($websiteTheme, secondary);
+  text-decoration: none;
+  transition: color 0.2s ease-out;
+
+  &:hover {
+    color: rgba(theme($websiteTheme, secondary), 0.6);
+  }
 }
 
-p a {
-	color: $links;
-	transition: color .2s ease-out;
-}
-
-p a:hover {
-	color: $web;
-}
-
-h1, h2, h3,  h4, h5, h6 {
-    line-height: 1.5;
-    margin-top: 0;
-    margin-bottom: .5rem;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  line-height: 1.5;
+  margin-top: 0;
+  margin-bottom: 0.5rem;
 }
 
 h1 {
-    font-size: 4em;
-    font-weight: 700;
+  font-size: 4em;
+  font-weight: 700;
 }
 
 h2 {
-    font-size: 2.5em
+  font-size: 2.5em;
 }
 
 h3 {
-    font-size: 1.5em;
-    font-weight: 300;
+  font-size: 1.5em;
+  font-weight: 300;
 }
 
 h4 {
-    font-size: 1.25em;
-    font-weight: 600;
+  font-size: 1.25em;
+  font-weight: 600;
 }
 
 h5 {
-    font-size: 1.125em
+  font-size: 1.125em;
 }
 
-strong, b {
-	font-weight: 500;
+b,
+strong {
+  font-weight: 500;
 }
 
 p {
-	font-weight: 300;
+  font-weight: 300;
 }
 
 section {
-	padding: 3em 1.5em;
+  padding: 0em 1.5em;
+  margin-bottom: 2em;
 }
 
-ul, li {
-	margin: 0;
-	padding: 0;
+li,
+ul {
+  margin: 0;
+  padding: 0;
 }
 
 li {
-	list-style: none;
+  list-style: none;
 }
 
 .wrap {
-	max-width: 1140px;
-	margin: 0 auto;
-	padding: 0 1em;
+  max-width: 1140px;
+  margin: 0 auto;
+  padding: 0 1em;
 }
 
 ::selection {
-	background: rgba(255, 82, 82, 1);
-	color: #fff
+  background: rgba(255, 82, 82, 1);
+  color: #fff;
 }
