--- a/src/views/_includes/_sections/_blog.pug
+++ b/src/views/_includes/_sections/_blog.pug
@@ -1,25 +1,31 @@
 section.blog
-    .wrap
-        h2.section-title Blog
-        h4.section-subtitle The latests posts of my blog.
-        .row.around-xs
-            each post in ghostData
-                .col-xs-12.col-sm-6.col-md-5.post-wrap
-                    article.post
-                        img.post-image(src=post.image)
-                        .post-content
-                            header
-                                h2.post-title
-                                    a(href='/blog'+post.url, onmousedown="ga('send', 'event', 'Post', 'Click', '" +post.title+ "');", target="_blank")=post.title
-                            .post-info
-                                time(datetime=post.published_at)=post.publishedAt
-                                span.post-tags
-                                    each tag in post.tags
-                                        a(class='post-tag '+tag.name, href='/blog/tag/'+tag.name, onmousedown="ga('send', 'event', 'Post', 'Click', 'tag-"+tag.name+"');", target="_blank")='#'+tag.name
-                            p.post-excerpt=post.excerpt
-                        footer.post-footer
-                            a.read-more(href='/blog'+post.url, onmousedown="ga('send', 'event', 'Post', 'Click', 'Read More');", target="_blank") Read more
-                                svg.icon.icon-arrow
-                                    use(xlink:href="#icon-arrow")
-        .more-btn
-            a.btn.btn-large.btn-blue(href="https://carloscuesta.me/blog" onmousedown="ga('send', 'event', 'Button', 'Click', 'Read more posts');", target="_blank") See more posts
+  .wrap
+    h2.section-title Writings
+    h4.section-subtitle The latests posts of my blog.
+    .row.blog-posts
+      each post in ghostData
+        .col-xs-12.col-sm-6.col-md-4.post-wrap
+          article.post
+            img.post-image(src=post.image, alt=post.title)
+            .post-content
+              header
+                h2.post-title
+                  a(href='/blog'+post.url, onmousedown="ga('send', 'event', 'Post', 'Click', '" +post.title+ "');", target="_blank", rel="noopener")=post.title
+              .post-info
+                time(datetime=post.published_at)=post.publishedAt
+                span.post-tags
+                  each tag in post.tags
+                    a(class='post-tag '+tag.name, href='/blog/tag/'+tag.name, onmousedown="ga('send', 'event', 'Post', 'Click', 'tag-"+tag.name+"');", target="_blank", rel="noopener")='#'+tag.name
+              p.post-excerpt=post.excerpt
+            footer.post-footer
+              a.read-more(href='/blog'+post.url, onmousedown="ga('send', 'event', 'Post', 'Click', 'Read More');", target="_blank", rel="noopener") Read more
+                svg.icon.icon-arrow
+                  use(xlink:href="#icon-arrow")
+      a(href="https://carloscuesta.me/blog" onmousedown="ga('send', 'event', 'Button', 'Click', 'Read more posts');", target="_blank").col-xs-12.col-sm-6.col-md-4.post-wrap
+        article.post.fake-article
+          .post-content
+            header
+              h2.post-title Did you enjoyed the articles? 👀
+            p.post-excerpt Hello! 👋🏼
+            p.post-excerpt Tap me if you want to read more awesome content on my blog
+            div.btn.btn-large.btn-blue Read more
